qsk-macros/tests/fail/analyze/tap-toggle-missing-keycode-argument.stderr
error: missing key code argument
 --> tests/fail/analyze/tap-toggle-missing-keycode-argument.rs:6:18
  |
6 |             F -> TapToggle(Navigation),
  |                  ^^^^^^^^^
